feat: новые ручки для сегментов
